Port latest changes from Turbine 2.3.
git-svn-id: https://svn.apache.org/repos/asf/turbine/fulcrum/trunk/intake@659986 13f79535-47bb-0310-9956-ffa450edef68